[CONTROLLER][DTO][EXCEPTION][SECURITY] Create the security controllers and configuration. Now a user has a role and some authorities.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=product-app-backend
+
+# spring.profiles.active=local
+
+server.servlet.context-path=/my-backend
+server.port=9191
+
+security.jwt.expiration-in-minutes=30
+
+security.jwt.secret-key=bWkgY2xhdmUgc3VwZXIgc2VndXJhIDEyMzQ1MjQ1MjIzMTEzMw==
+
+spring.jpa.show-sql=true
+
+# Esto hace que spring cuando arranque busque un archivo nombrado schema.sql
+# Como no estamos creando la bd con un esquema escrito manualmente, hay que poner la siguiente propiedad
+spring.sql.init.mode=always
+
+# Esto hace que la inicializacion del datasource sea distinta (normalmente el .sql crea las tablas)
+# Como no lo hacemos como de normal, esto indica que cuando encuentre el data.sql se va a esperar a spring
+# para que inicialice toda la aplicacion (este arranque es el que crea todas las bases de datos) para luego
+# poder insertar en la bd los datos (con el data.sql)
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.sql.init.platform=h2
